# pymc-mlflow-deployment

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  bentoml_configuration.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml
conf/: config.yaml
conf/experiment/: default.yaml
models/: pymc.yaml
pymc_mlflow/: 1_train_model.py  2_deploy_model.py  DataModels.py
scripts/: build.sh  down.sh  pull.sh  push.sh  pymc_mlflow.sh
